# tauri-daily-helper

./: .gitignore  README.md  empty-module.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.cursor/rules/: api.mdc  architecture.mdc  database.mdc  index.mdc  prd.mdc  roadmap.mdc  ui.mdc
.github/workflows/: github-pages.yml  publish-releases.yml  publish.yml
src-tauri/: Cargo.toml  daily.db  tauri.conf.json  template.md  weekly.md
src-tauri/src/: database.rs.bak  database.rs.old  dingtalk.rs  idle.rs  lib.rs  main.rs  notify.rs
src-tauri/src/database/: mod.rs  mod.rs.bak  sqlite.rs  types.rs
src-tauri/src/database/excel/: generator.rs  mod.rs  parser.rs  template.rs  utils.rs
src-tauri/src/database/file_utils/: file_utils_impl.rs  mod.rs
src-tauri/src/database/git_utils/: mod.rs
src-tauri/src/database/report/: mod.rs  report_impl.rs
src-tauri/src/database/supabase/: mod.rs  supabase_impl.rs
src/app/: IdleListener.tsx  _app.tsx  globals.css  layout.tsx  nav-styles.css  page.tsx
src/app/api/: dailies.ts
src/app/dailies/: page.tsx
src/app/daily/: page.tsx  page.tsx.bak
src/app/dingtalk/: page.tsx
src/app/login/: page.tsx
src/app/monthly/: page.tsx
src/components/: ClientLayout.tsx  DatabaseErrorHandler.tsx  DatabaseInitializer.tsx  GitProjectsConfig.tsx  GitSummary.tsx  PageTemplate.tsx  TaskList.tsx  ThemeToggle.tsx  UserAvatar.tsx
src/lib/: db.ts  init.ts  initSupabase.ts  supabaseClient.ts  tauriHelper.ts
src/services/: GitService.ts
src/types/: env.d.ts  index.ts  xlsx-populate.d.ts
(+24 files in other folders)
