[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0"
rusqlite = { version = "0.31", features = ["bundled"] }
device_query = "1.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tauri-plugin-notification = "2.0.0-rc"
chrono = { version = "0.4", features = ["clock", "serde"] }
handlebars = "4"
calamine = "0.21.0"
xlsxwriter = "0.6.0"
tempfile = "3.8.0"
umya-spreadsheet = "1.2.7"
tokio = { version = "1.32", features = ["full"] }
